Resolves: tdf#129586 icon combobox is not in the same grid as the others

so it doesn't take 1/3rd dialog width automatically, let it take its
natural width

Change-Id: If42c153976431d408c343e64c1bc5b301fdb5b0a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/86270
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>